--- a/web/formulario2.xhtml
+++ b/web/formulario2.xhtml
@@ -36,7 +36,7 @@
                                    itemLabel="#{padrao.descricao}"
                                    itemValue="#{padrao.valor}" />
                 </h:selectOneMenu>
-                <h:outputLabel value="" />
+                <h:outputLabel value="R$ #{salarioBean.vencimentoBasico}" />
                 <h:outputLabel value="" />
                 <h:outputLabel value="" />
                 <h:outputLabel value="" />
@@ -258,9 +258,9 @@
                 <h:outputLabel value="" />
                 <h:outputLabel value="" />
                 <h:outputLabel value="" />
-                
                
             </h:panelGrid>
+            <h:commandButton value="Calcular" action="#{salarioBean.calculaVencimentoBasico}" />
         </h:form>
     </h:body>
 </html>
