--- a/web/formulario2.xhtml
+++ b/web/formulario2.xhtml
@@ -261,6 +261,28 @@
                
             </h:panelGrid>
             <h:commandButton value="Calcular" action="#{salarioBean.calculaVencimentoBasico}" />
+            <h:dataTable id="items" 
+            value="#{SeuBean.carros}" 
+            var="item"> 
+                <h:column > 
+                    <f:facet name="header"> 
+                        <h:outputText value="Marca" /> 
+                    </f:facet> 
+                    <h:outputText value="#{item.marca}"/> 
+                </h:column> 
+                <h:column> 
+                    <f:facet name="header"> 
+                        <h:outputText value="Nome"/> 
+                    </f:facet> 
+                    <h:outputText value="#{item.nome}"/> 
+                </h:column> 
+                <h:column> 
+                    <f:facet name="header"> 
+                        <h:outputText value="Ano"/> 
+                    </f:facet> 
+                    <h:outputText value="#{item.ano}"/> 
+                </h:column> 
+            </h:dataTable>
         </h:form>
     </h:body>
 </html>
