--- a/web/welcomePrimefaces.xhtml
+++ b/web/welcomePrimefaces.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
-    <f:view contentType="text/html">
+    <f:view contentType="text/html" locale="pt_BR">
         <h:head>
             <f:facet name="first">
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
@@ -149,7 +149,7 @@
                             </p:column>
                             <p:column style="text-align: left; size: 145" headerText="Valor">
                                 <h:outputText value="#{creditos.valor}" >
-                                    <f:convertNumber type="currency" currencyCode="BRL"/>
+                                    <f:convertNumber type="currency"  />
                                 </h:outputText>
                             </p:column>
                         </p:dataTable>
@@ -161,7 +161,7 @@
                             </p:column>
                             <p:column style="text-align: right; size: 145" >
                                 <h:outputText value="#{debitos.valor}" style="color: red">
-                                    <f:convertNumber type="currency"  currencyCode="BRL"/>
+                                    <f:convertNumber type="currency"   />
                                 </h:outputText>
                             </p:column>
                         </p:dataTable>
@@ -173,13 +173,13 @@
                                 <p:outputLabel value="Descontos:" />
                                 <p:outputLabel value="Salário Líquido:" />
                                 <p:outputLabel value="#{folhaBean.salarioBrutoValor}" style="font-weight: bold" >
-                                    <f:convertNumber type="currency"  currencyCode="BRL"/>
+                                    <f:convertNumber type="currency"   />
                                 </p:outputLabel>
                                 <p:outputLabel value="#{folhaBean.descontosValor}"  >
-                                    <f:convertNumber type="currency"  currencyCode="BRL"/>
+                                    <f:convertNumber type="currency"   />
                                 </p:outputLabel>
                                 <p:outputLabel value="#{folhaBean.salarioLiquidoValor}" style="font-weight: bold; color: blue" >
-                                    <f:convertNumber type="currency"  currencyCode="BRL"/>
+                                    <f:convertNumber type="currency"   />
                                 </p:outputLabel>
                                 
                             </p:panelGrid>
